...
        actions: [
          TextButton(
            onPressed: () => Navigator.pop(context),
            child: Text(AppLocalizations.of(context)!.cancel),
          ),
          TextButton(
            key: Key('confirm_create_template'),
            onPressed: () {
              if (_formKey.currentState?.validate() ?? false) {
                final newDraft = Draft(name: _controller.text, draft: {});
                Navigator.pop(context);
                _navigateToTemplateScreen(newDraft);
              }
...
                              crossAxisAlignment: CrossAxisAlignment.start,
                              children: [
                                Row(
                                  mainAxisAlignment: MainAxisAlignment.start,
                                  children: [
                                    ElevatedButton.icon(
                                      key: Key('create_template_button'),
                                      icon: Icon(
                                        Icons.add,
                                        size: screenSize.height * 0.025,
                                        color: theme.colorScheme.onPrimary,
                                      ),
                                      label: Text(
...
