...
    }
      
    showDialog(
      context: context,
      builder: (context) => AlertDialog(
        title: Text(
          key: Key('choose_game_option'),
          AppLocalizations.of(context)!.choose_game_option
        ),
        content: Column(
          mainAxisSize: MainAxisSize.min,
          children: [
            ListTile(
              leading: Icon(Icons.search),
              title: Text(
                key: Key('quick_match'),
                AppLocalizations.of(context)!.quick_match
              ),
              onTap: () {
                Navigator.pop(context);
                _joinMatchmaking();
              },
            ),
            ListTile(
              leading: Icon(Icons.play_arrow),
              title: Text(
                key: Key('resume_paused'),
                AppLocalizations.of(context)!.resume_paused
              ),
              onTap: () {
                Navigator.pop(context);
                _showPausedGamesDialog();
              },
...
    final user = User();
    if (!user.isDraftComplete || user.currentSelectedDraft.id == -1) {
      showDialog(
        context: context,
        builder: (ctx) => AlertDialog(
          title: Text(
            key: Key('incomplete_draft'),
            AppLocalizations.of(context)!.incomplete_draft
          ),
          content: Text(AppLocalizations.of(context)!.no_draft_selected),
          actions: [
            TextButton(
              onPressed: () => Navigator.pop(ctx),
...
                              ? Center(child: CircularProgressIndicator())
                              : leaderboard.isEmpty
                                  ? Center(
                                      child: Padding(
                                        padding: EdgeInsets.all(16),
                                        child: Text(
                                          key: Key('no_leaderboard_data'),
                                          AppLocalizations.of(context)!.err_laderboard,
                                          textAlign: TextAlign.center,
                                        ),
                                      ),
                                    )
                                  : ListView.separated(
...
  }

  Widget _buildActionButtons(BoxConstraints constraints) {
    return Column(
      children: [
        GestureDetector(
          key: Key('drafts-button'),
          onTap: () => _navigateToDrafts(),
          child: Panel(
            width: constraints.maxWidth * 0.95,
            height: constraints.maxHeight * 0.12,
            content: Padding(
              padding: EdgeInsets.all(8),
...
